--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,44 +1,21 @@
-# This is a basic workflow to help you get started with Actions
+name: Release AddOn # description of this workflow, can be anything you want
 
-name: Release Addon
-
-# Controls when the workflow will run
+# triggers when pushing a tag
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     tags:
       - '**'
 
+env:
+  CF_API_KEY: ${{ secrets.CF_API_KEY }}
+  GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
-
-  # "release" is a job, you can name it anything you want
-  release:
-
-    # we can run our steps on pretty much anything, but the "ubuntu-latest" image is a safe bet
+  release: # "release" is a job, you can name it anything you want
     runs-on: ubuntu-latest
-
-    # specify the environment variables used by the packager, matching the secrets from the project on GitHub
-    env:
-      CF_API_KEY: ${{ secrets.CF_API_KEY }}
-      GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}  # "GITHUB_TOKEN" is a secret always provided to the workflow
-                                                 # for your own token, the name cannot start with "GITHUB_"
-
-    # "steps" holds a list of all the steps needed to package and release our AddOn
     steps:
-
-      # we first have to clone the AddOn project, this is a required step
-      - name: Clone project
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # gets entire git history, needed for automatic changelogs
+          fetch-depth: 0 # reads history for commit changelog
 
-      # once cloned, we just run the GitHub Action for the packager project
-      - name: Package and release
-        uses: BigWigsMods/packager@v2
-
-      # another example where we supply additional arguments, this example is specifically to release
-      # for the Wrath of the Lich King Classic version of the game and doesn't upload to WoWInterface
-      - name: Package and release for Wrath of the Lich King Classic
-        uses: BigWigsMods/packager@v2
-        with:
-          args: -g wrath -w 0ct.
+      - uses: BigWigsMods/packager@v2
